tests/profile/error/keybinding/missing_name.profile
{
  "version": { "major": 1, "minor": 0 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": "T script"
    }
  ]
}
